2009-03-17  Mikhael Goikhman  <migo@homemail.com>

	* COMMANDS:
	regenerated (by create-commands)

	* todo-2.6:
	close items E.11, E.12

2009-02-27  Thomas Adam   <thomas.adam22@gmail.com>

	* todo-2.6:
	Deprecate the "Closed recently" section, since this file is updated so
	infrequently, the term "recently" was in 2005, when at the time of
	writing, it's 2009.  Instead, add all closed bugs under "Closed" from
	now on.

2009-02-23  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* ANNOUNCE:
	updated for 2.5.27 release

2008-05-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* ANNOUNCE:
	updated for 2.5.25 release

2008-01-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* DEVELOPERS:
	add instructions on how to update the html documentation

2007-11-24  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* DEVELOPERS:
	updated release instructions

	* ANNOUNCE:
	updated for 2.5.24 release

2007-09-01  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* DEVELOPERS:
	updated release instructions

	* ANNOUNCE:
	updated for 2.5.23 release

2007-08-28  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* ANNOUNCE:
	updated

2007-08-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* ANNOUNCE:
	updated

2007-08-07  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* BUGS:
	* todo-2.6:
	* FAQ:
	write fvwm in lower case

2007-08-05  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* fvwm.lsm.in:
	removed FVWMNAMEUCASE

2007-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* ANNOUNCE:
	updated for 2.5.22 release

2007-01-15  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* ANNOUNCE:
	updated for 2.5.20 release

2007-01-06  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* todo-2.6 (todo):
	close C.5. Tested placement with gtk+2 sample app, works well.

2006-12-09  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* ANNOUNCE:
	updated for 2.5.19 release

2006-12-08  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* todo-2.6 (todo):